clean up and config env variables and requirements

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,24 +9,9 @@
             "server": "localhost",
             "port": 3306,
             "driver": "MySQL",
-            "name": "lesgo",
-            "username": "zab",
-            "password": "GonKillua05!",
-            "database": "cheese"
-        },
-        {
-            "mysqlOptions": {
-                "authProtocol": "default",
-                "enableSsl": "Disabled"
-            },
-            "previewLimit": 50,
-            "server": "localhost",
-            "port": 3306,
-            "driver": "MySQL",
-            "name": "connection1",
+            "name": "cheese_connection",
             "database": "cheese_db",
-            "username": "air_dev",
-            "password": "air_dev_pwd"
+            "username": "air_dev"
         }
     ]
 }
